<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.AuthFragment"
    android:padding="20dp"
    android:background="#e5e5e5"
    android:layout_centerHorizontal="true">

        <androidx.cardview.widget.CardView
            android:layout_centerHorizontal="true"
            android:id="@+id/img_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="48dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/task_txt"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_app"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:hint="@string/write_your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_et"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:hint="@string/write_your_password"
        android:inputType="textPassword"
        android:textColor="@color/black" />
        <ImageView
            android:id="@+id/slash_eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pass_et"
            android:layout_alignEnd="@+id/pass_et"
            android:layout_alignBottom="@+id/pass_et"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_icon_eye"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/withSlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pass_et"
            android:layout_alignEnd="@+id/pass_et"
            android:layout_alignBottom="@+id/pass_et"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_icon_eye2"
            android:visibility="invisible" />

    <Button
        android:id="@+id/enter_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_for_rv2"
        android:text="@string/enter_register"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

   <LinearLayout
       android:layout_centerHorizontal="true"
       android:weightSum="8"
       android:gravity="center"
       android:layout_above="@id/ll_2"
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <View
           android:layout_weight="3"
           android:background="@color/black"
           android:id="@+id/line"
           android:layout_width="100dp"
           android:layout_height="1dp"/>
       <TextView
           android:layout_marginHorizontal="10dp"
           android:textColor="@color/black"
           android:layout_weight="2"
           android:id="@+id/tv_login"
           android:text="@string/login_with"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <View
           android:layout_weight="3"
           android:background="@color/black"
           android:id="@+id/line2"
           android:layout_width="100dp"
           android:layout_height="1dp"/>

   </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/ll_2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/btn_google"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    </RelativeLayout>